--- a/index.html
+++ b/index.html
@@ -1,89 +1,84 @@
----
-layout: default
-title: Code for America 2012 Annual Report
----
+<!DOCTYPE html>
+<html>
 
-<div id="loading">
-  <img src="img/CfA_logo_white.png" />
-  <h1>2012</h1> 
-  <p>Annual Report</p>
-</div>
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Stemcore : DHF STEM Core" />
 
-<div class="navbar navbar-inverse navbar-fixed-top">
-  <div class="navbar-inner">
-    <div class="container">
-      <a class="brand" href="#"><img class="cfalogo" src="img/cfa_logo.png" alt="Code for America logo" /></a>
-      <!-- Everything you want hidden at 940px or less, place within here -->
-      <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
-      <div class="nav-collapse collapse">
-        <!-- .nav, .navbar-search, .navbar-form, etc -->
-        <ul class="nav">
-          <li class="navfellowship"><a href="#">Fellowship</a></li>
-          <li class="navapps"><a href="#">Applications</a></li>
-          <li class="navbrigade"><a href="#">Brigade</a></li>
-          <li class="navaccelerator"><a href="#">Accelerator</a></li>
-          <li class="navpeernetwork"><a href="#">Peer Network</a></li>
-          <li class="navfoundersnote"><a href="#">Jen's Note</a></li>
-          <li class="navpeople"><a href="#">People</a></li>
-          <li class="navfinancials"><a href="#">Financials</a></li>
-        </ul> <!-- nav -->
-      </div> <!-- collapse -->
-    </div> <!-- container -->
-  </div> <!-- navbar-inner -->
-</div> <!-- navbar -->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
+    <title>Stemcore</title>
+  </head>
 
+  <body>
 
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/DigitalHarborFoundation/stemcore">View on GitHub</a>
 
+          <h1 id="project_title">Stemcore</h1>
+          <h2 id="project_tagline">DHF STEM Core</h2>
 
-{% for p in site.posts %}
-
-{% if p.url != "/index.html" %}
-<div class="pagebg {{ p.pagetype }} {{ p.image }}" style="background-color:#{{ p.bgcolor }};" >
-</div>
-{% endif %}
-{% endfor %}  
-
-
-<div id="page">
-  <div class="sidebar">
-
-    {% for p in site.posts %}
-
-    <div class="sidebartitle" >
-
-      <h1>2012</h1>
-      {% if p.title != "stats" %}
-      <h2>{{ p.title }}</h2>
-
-      {% endif %}
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/DigitalHarborFoundation/stemcore/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/DigitalHarborFoundation/stemcore/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
     </div>
 
-    {% endfor %}
-    
-  </div>
-  
-  {% for p in site.posts %}
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>Welcome to GitHub Pages.</h3>
 
-  {% if p.url != "/index.html" %}
-  <div class="page {{ p.pagetype }}" style="background-color:#{{ p.bgslide }};padding-top:{{ p.extrapadding }}" data-section="nav{{ p.section }}">
-    {{ p.content | markdownify }}
-    <div class="clear"></div>  
-  </div>
-  {% endif %}
-  {% endfor %}
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-</div>
+<pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code></pre>
 
-<div class="sharebutton">
-  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://annual.codeforamerica.org" data-text="Check out @codeforamerica's 2012 Annual Report here:">Tweet</a>
-  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-  <div></div>
-  <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fannual.codeforamerica.org&amp;send=false&amp;layout=button_count&amp;width=200&amp;show_faces=false&amp;font=lucida+grande&amp;colorscheme=light&amp;action=like&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:200px; height:21px; display:block; margin-top:5px;" allowTransparency="true"></iframe>
-  
-</div>
+<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+
+<h3>Designer Templates</h3>
+
+<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+
+<h3>Rather Drive Stick?</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>Authors and Contributors</h3>
+
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Stemcore maintained by <a href="https://github.com/DigitalHarborFoundation">DigitalHarborFoundation</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-40824146-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
+
+  </body>
+</html>
