made a few changes to the names

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 ---
 layout: default
-title: Code for America 2012 Annual Report
+title: STEM Core
 ---
 
 <div id="loading">
-  <img src="img/CfA_logo_white.png" />
-  <h1>2012</h1> 
-  <p>Annual Report</p>
+  <h1>STEM Core</h1> 
+  <p>Powered By STEM Engine</p>
 </div>
 
 <div class="navbar navbar-inverse navbar-fixed-top">
