--- a/_posts/2013-05-11-about.html
+++ b/_posts/2013-05-11-about.html
@@ -1,6 +1,6 @@
 ---
 layout: fullpage
-title: What is it?
+title: About STEM Core
 image: 
 pagetype: story
 ---
@@ -8,7 +8,7 @@ pagetype: story
 <div class="row-fluid">
 	<div class="bios">
 		<div class="span6">
-			<img src="../img/about.jpg">
+			<img src="img/about.jpg">
 		</div>
 		<div class="span6 bioright">
 			<p>STEM Core is a Common Core aligned STEM curriculum developed by Digital Harbor Foundation in partnership with Battelle and Arizone State University.  The curriculum offers students an opportunity to learn employable technology skills.</p>
@@ -23,7 +23,7 @@ pagetype: story
 			<p>Digital Harbor Foundation uses a combined approach of employing professional technologists and educators to create a curriculum that serves the needs of educators and future employers to develop confident and capable students.</p>
 		</div>
 		<div class="span6">
-			<img src="../img/20130201_2645.JPG">
+			<img src="img/20130201_2645.JPG">
 		</div>
 	</div>
 </div>
@@ -31,7 +31,7 @@ pagetype: story
 <div class="row-fluid">	
 	<div class="bios">
 		<div class="span6">
-			<img src="../img/DHFTC-Front.jpg">
+			<img src="img/DHFTC-Front.jpg">
 		</div>
 		<div class="span6 bioright">
 			<p>Digital Harbor Foundation has the unique opportunity to develop and incubate their curriculums by utilizing their after school tech center.  This 7,000 square foot space is nestled in the heart of Baltimore, MD and offers students an opportunity to interact with technology professionals and to explore their technological passions in a safe environment.  Our curriculum is tested with students in the space with feedback from educators and technologists.</p>
