Initial layout completed

--- a/_posts/2013-05-11-about.html
+++ b/_posts/2013-05-11-about.html
@@ -1,14 +1,15 @@
 ---
 layout: fullpage
-title: About STEM Core
+title: About
 image: 
 pagetype: story
+section: about
 ---
 
 <div class="row-fluid">
 	<div class="bios">
 		<div class="span6">
-			<img src="img/about.jpg">
+			<img src="img/8664271728_03e6ef301f.jpg">
 		</div>
 		<div class="span6 bioright">
 			<p>STEM Core is a Common Core aligned STEM curriculum developed by Digital Harbor Foundation in partnership with Battelle and Arizone State University.  The curriculum offers students an opportunity to learn employable technology skills.</p>
