--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@ title: STEM Core
       <div class="nav-collapse collapse">
         <!-- .nav, .navbar-search, .navbar-form, etc -->
         <ul class="nav">
-          <li class="navfellowship"><a href="#">About</a></li>
-          <li class="navapps"><a href="#">Web Development</a></li>
-          <li class="navbrigade"><a href="#">Mobile Development</a></li>
-          <li class="navaccelerator"><a href="#">Digital Design</a></li>
-          <li class="navpeernetwork"><a href="#">Cyber Security</a></li>
-          <li class="navfoundersnote"><a href="#">Contact Us</a></li>
+          <li class="navabout"><a href="#">About</a></li>
+          <li class="navwebdev"><a href="#">Web Development</a></li>
+          <li class="navmobdev"><a href="#">Mobile Development</a></li>
+          <li class="navdigitaldesign"><a href="#">Digital Design</a></li>
+          <li class="navsecurity"><a href="#">Cyber Security</a></li>
+          <li class="navcontact"><a href="#">Contact Us</a></li>
         </ul> <!-- nav -->
       </div> <!-- collapse -->
     </div> <!-- container -->
