--- a/_posts/2013-05-09-mobileDev.html
+++ b/_posts/2013-05-09-mobileDev.html
@@ -1,15 +1,15 @@
 ---
 layout: fullpage
-title: Web <br/>Development
+title: Mobile <br/>Development
 image: 
 pagetype: story
-section: webdev
+section: mobdev
 ---
 
 <div class="row-fluid">
 	<div class="bios">
 		<div class="span6">
-			<img src="img/website1.jpg">
+			<img src="img/portfolio-hallsweep1.png">
 		</div>
 		<div class="span6 bioright">
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ullamcorper lacinia sem, tristique mattis leo porta eget. Nunc aliquam quam eget turpis pretium fermentum. Nunc sodales, lacus ac euismod bibendum, lacus turpis cursus leo, et pulvinar lorem odio id ligula. In hac habitasse platea dictumst. Ut egestas, diam eget blandit euismod, quam diam luctus erat, nec luctus mauris nulla sit amet metus. Nam ac dolor risus, id ultricies tellus. Proin augue nisl, tempor in luctus et, pulvinar auctor magna. Mauris suscipit, purus non tristique consectetur, mi nunc rutrum orci, quis pharetra sapien ipsum vitae velit. Vestibulum bibendum sem et dolor hendrerit gravida.</p>
@@ -24,7 +24,7 @@ section: webdev
 			<p>In hac habitasse platea dictumst. Nulla et lorem sem, eget sollicitudin libero. Duis id felis quis nisl tincidunt iaculis ac in ante. Nulla facilisi. Praesent a mi leo. Pellentesque orci dui, auctor quis facilisis eu, sagittis vitae diam. Proin porttitor, arcu ultrices volutpat dapibus, felis urna posuere enim, et accumsan nibh ante eu nulla. Sed porta tempus metus, sed convallis magna vulputate sed. Duis porttitor, nulla sed laoreet pulvinar, dolor lectus blandit tellus, quis dignissim diam massa sit amet magna. Sed diam sapien, commodo viverra fermentum quis, fringilla nec elit. Nunc laoreet, sapien vitae elementum viverra, neque urna viverra ante, eget fermentum nisi ipsum nec risus. Sed urna diam, accumsan non facilisis nec, vulputate vitae neque. Vivamus ut luctus nisi. Proin nulla ipsum, euismod non semper vitae, semper et massa. Maecenas quis diam tortor, id pretium leo. Nulla tempor nisl et enim elementum bibendum.</p>
 		</div>
 		<div class="span6">
-			<img src="img/8664271822_0b360afacf_n.jpg">
+			<img src="http://placehold.it/500x333">
 		</div>
 	</div>
 </div>
