updated CSS to make full page image on About screen

--- a/_posts/2013-05-11-about.html
+++ b/_posts/2013-05-11-about.html
@@ -1,41 +1,9 @@
 ---
 layout: fullpage
 title: About
-image: 
-pagetype: story
+image: imageabout
+pagetype: quote
 section: about
 ---
 
-<div class="row-fluid">
-	<div class="bios">
-		<div class="span6">
-			<img src="img/8664271728_03e6ef301f.jpg">
-		</div>
-		<div class="span6 bioright">
-			<p>STEM Core is a Common Core aligned STEM curriculum developed by Digital Harbor Foundation in partnership with Battelle and Arizone State University.  The curriculum offers students an opportunity to learn employable technology skills.</p>
-			
-		</div>
-	</div>
-</div>
-
-<div class="row-fluid">
-	<div class="bios right">
-		<div class="span6 bioleft">
-			<p>Digital Harbor Foundation uses a combined approach of employing professional technologists and educators to create a curriculum that serves the needs of educators and future employers to develop confident and capable students.</p>
-		</div>
-		<div class="span6">
-			<img src="img/20130201_2645.JPG">
-		</div>
-	</div>
-</div>
-
-<div class="row-fluid">	
-	<div class="bios">
-		<div class="span6">
-			<img src="img/DHFTC-Front.jpg">
-		</div>
-		<div class="span6 bioright">
-			<p>Digital Harbor Foundation has the unique opportunity to develop and incubate their curriculums by utilizing their after school tech center.  This 7,000 square foot space is nestled in the heart of Baltimore, MD and offers students an opportunity to interact with technology professionals and to explore their technological passions in a safe environment.  Our curriculum is tested with students in the space with feedback from educators and technologists.</p>
-		</div>
-	</div>
-</div>
+STEM Core is a Common Core aligned STEM curriculum developed by Digital Harbor Foundation in partnership with Battelle and Arizone State University.  The curriculum offers students an opportunity to learn employable technology skills.
