--- a/_posts/2013-05-06-contact.html
+++ b/_posts/2013-05-06-contact.html
@@ -1,18 +1,66 @@
 ---
 layout: fullpage
 title: Contact Us
-image: 
+image: imagecontact
 pagetype: story
 section: contact
 ---
 
-<div class="row-fluid">
-	<div class="bios">
-		<div class="span6">
-			<img src="http://placehold.it/500x333">
+<div class="network themes">
+	
+	<div class="row-fluid">
+		<div class="span12 getinvolved">
+			<p class="blurb">We'd love to hear from you. Please feel free to reach out to us via email or any one of our social media networks:</p>
+
+
+	<div class="stats">
+		<div class="row-fluid">
+			<div class="span4">
+				<h4>Email</h4>
+				<h1><a href="mailto:info@digitalharborfoundation.org?subject=[website inquiry]"><img src="img/icon_email.png" height="100px" /></a></h1>
+			</div>
+			<div class="span4">
+				<h4>Facebook</h4>
+				<h1><a href="https://www.facebook.com/DigitalHarbor" target="_blank"><img src="img/icon_facebook.png" height="100px" /></a></h1>
+			</div>
+			<div class="span4">
+				<h4>Twitter</h4>
+				<h1><a href="https://www.twitter.com/@dhfbaltimore" target="_blank"><img src="img/icon_twitter.png" height="100px" /></a></h1>
+			</div>
 		</div>
-		<div class="span6 bioright">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ullamcorper lacinia sem, tristique mattis leo porta eget. Nunc aliquam quam eget turpis pretium fermentum. Nunc sodales, lacus ac euismod bibendum, lacus turpis cursus leo, et pulvinar lorem odio id ligula. In hac habitasse platea dictumst. Ut egestas, diam eget blandit euismod, quam diam luctus erat, nec luctus mauris nulla sit amet metus. Nam ac dolor risus, id ultricies tellus. Proin augue nisl, tempor in luctus et, pulvinar auctor magna. Mauris suscipit, purus non tristique consectetur, mi nunc rutrum orci, quis pharetra sapien ipsum vitae velit. Vestibulum bibendum sem et dolor hendrerit gravida.</p>		
+	</div>
+	<div class="stats">
+		<div class="row-fluid">
+			<div class="span4">
+				<h4>Flickr</h4>
+				<h1><a href="http://www.flickr.com/digitalharborfoundation" target="_blank"><img src="img/icon_flickr.png" height="100px" /></a></h1>
+			</div>
+			<div class="span4">
+				<h4>YouTube</h4>
+				<h1><a href="https://www.youtube.com/dhfbaltimore" target="_blank"><img src="img/icon_youtube.png" height="100px" /></a></h1>
+			</div>
+			<div class="span4">
+				<h4>Instagram</h4>
+				<h1><a href="http://www.instagram.com/dhfbaltimore" target="_blank"><img src="img/icon_instagram.png" height="100px" /></a></h1>
+			</div>
+		</div>
+	</div>
+
+	<div class="stats">
+			<div class="row-fluid">
+			<div class="span12">
+				<h4>Address</h4>
+				<h1>
+
+<iframe width="540" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Digital+Harbor+Foundation+Tech+Center,+Light+Street,+Baltimore,+MD&amp;aq=0&amp;oq=Digital+Harbor+Foundation+Te&amp;sll=39.277165,-76.612281&amp;sspn=0.011544,0.018432&amp;g=1045+Light+St,+Baltimore,+MD&amp;ie=UTF8&amp;hq=Digital+Harbor+Foundation+Tech+Center,&amp;hnear=Light+St,+Baltimore,+Maryland&amp;t=p&amp;cid=17965443148391220754&amp;ll=39.28635,-76.612215&amp;spn=0.026573,0.046263&amp;z=14&amp;output=embed"></iframe>
+
+
+</h1>
+			</div>
+
+		</div>
+	</div>
+
 		</div>
 	</div>
 </div>
