--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@ title: STEM Core
 ---
 
 <div id="loading">
-  <h1>STEM Core</h1> 
-  <p>Powered By STEM Engine</p>
+  <h1>&nbsp;</h1> 
+  <p>Baltimore, MD</p>
 </div>
+
+<div id="dhflogo">
+<a class="brand" href="#"><img class="dhflogo" src="img/dhflogo.png" alt="DHF logo" /></a>
+</div>
+
 
 <div class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-      <!--<a class="brand" href="#"><img class="cfalogo" src="img/cfa_logo.png" alt="Code for America logo" /></a>-->
       <!-- Everything you want hidden at 940px or less, place within here -->
       <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -20,15 +24,18 @@ title: STEM Core
         <span class="icon-bar"></span>
       </a>
       <div class="nav-collapse collapse">
+
         <!-- .nav, .navbar-search, .navbar-form, etc -->
         <ul class="nav">
-          <li class="navabout"><a href="#">About</a></li>
-          <li class="navwebdev"><a href="#">Web Development</a></li>
-          <li class="navmobdev"><a href="#">Mobile Development</a></li>
-          <li class="navdigitaldesign"><a href="#">Digital Design</a></li>
-          <li class="navsecurity"><a href="#">Cyber Security</a></li>
+          <li class="navmission"><a href="#">Digital Harbor Foundation</a></li>
+          <li class="nav"><a href="#">:::</a></li>
+          <li class="navtechcenter"><a href="#">Tech Center</a></li>
+          <li class="navblog"><a href="#">Blog</a></li>
+          <li class="navteam"><a href="#">Team</a></li>
+          <li class="navpress"><a href="#">Press</a></li>
           <li class="navcontact"><a href="#">Contact Us</a></li>
-        </ul> <!-- nav -->
+        </ul>
+		<!-- nav -->
       </div> <!-- collapse -->
     </div> <!-- container -->
   </div> <!-- navbar-inner -->
@@ -54,7 +61,7 @@ title: STEM Core
 
     <div class="sidebartitle" >
 
-      <h1>STEM Core</h1>
+      <h1>DHF</h1>
       {% if p.title != "stats" %}
       <h2>{{ p.title }}</h2>
 
@@ -77,7 +84,7 @@ title: STEM Core
 </div>
 
   <div id="footer">
-    <a href="http://www.stemengine.org">Powered by STEM Engine</a>
+    <a href="https://www.github.com/codeforamerica/annual" target="_blank">Code forked from Code For America</a> | <a href="http://www.stemengine.org" target="_blank">Powered by STEM Engine</a> | <a href="http://www.madewithloveinbaltimore.org" target="_blank">Made with &hearts; in Baltimore</a>
   </div>
 
 <!--
