--- a/_posts/2013-05-06-press.html
+++ b/_posts/2013-05-06-press.html
@@ -6,7 +6,17 @@ pagetype: story
 section: press
 ---
 
+<div class="market themes">
+
+	<div class="row-fluid">
+		<div class="span12">
+			<h4 class="headline">In the News:</h4>
+		</div>
+	</div>
+</div>
+
 <div class="press">
+
 	<div class="row-fluid">
 		<div class="span12 getinvolved">
 		 <!-- <p>See what others had to say about us this year:</p><br /> -->
@@ -25,6 +35,16 @@ section: press
 		</ul>
 		</div>
 	</div>
+
+
+<div class="market themes">
+
+	<div class="row-fluid">
+		<div class="span12">
+			<h4 class="headline">Recent Video:</h4>
+		</div>
+	</div>
+</div>
 
 	<div class="row-fluid">
 		<div class="span12 getinvolved">
