--- a/_posts/2013-05-09-team.html
+++ b/_posts/2013-05-09-team.html
@@ -55,7 +55,35 @@ section: team
 
   <h2>DHF Staff</h2>
 
-<div class="morefellows">
+<div class="dhfstaff">
+		<div class="row-fluid">
+			<div class="span12">
+				<a class="morefellowspop andrew" rel="popover" data-toggle="popover" data-content="Executive Director" data-original-title="Andrew Coy" href="https://twitter.com/andrewcoy" target="_blank"></a>
+				<a class="morefellowspop shawn" rel="popover" data-toggle="popover" data-content="Director of Technology" data-original-title="Shawn Grimes" href="https://twitter.com/shawng" target="_blank"></a>	
+				<a class="morefellowspop steph" rel="popover" data-toggle="popover" data-content="Director of Curriculum" data-original-title="Steph Grimes" href="https://twitter.com/createdbysteph" target="_blank"></a>
+				<a class="morefellowspop jean" rel="popover" data-toggle="popover" data-content="Director of Media" data-original-title="Jean Carlos Cedré" href="https://twitter.com/jccedre" target="_blank"></a>
+				<a class="morefellowspop amber" rel="popover" data-toggle="popover" data-content="Director of Operations" data-original-title="Amber Grimes" href="" target="_blank"></a>
+				<a class="morefellowspop meaghan" rel="popover" data-toggle="popover" data-content="Elementary Program Coordinator" data-original-title="Meaghan Lynch" href="https://twitter.com/meagcl" target="_blank"></a>
+				<a class="morefellowspop courtney" rel="popover" data-toggle="popover" data-content="Assistant Elementary Program Coordinator" data-original-title="Courtney Parto" href="https://twitter.com/c_parto" target="_blank"></a>
+				<a class="morefellowspop dale" rel="popover" data-toggle="popover" data-content="Secondary Program Coordinator" data-original-title="Dale Beran" href="" target="_blank"></a>
+				<a class="morefellowspop COMMUNITY" rel="popover" data-toggle="popover" data-content="Community Program Coordinator" data-original-title="VACANT" href="" target="_blank"></a>
+				<a class="morefellowspop ty" rel="popover" data-toggle="popover" data-content="Volunteer Program Coordinator" data-original-title="Ty Pearson" href="https://twitter.com/tygemstones" target="_blank"></a>
+ <!--				<a class="morefellowspop martha" rel="popover" data-toggle="popover" data-content="MakerCorps Member" data-original-title="Martha Schnee" href="" target="_blank"></a>
+				<a class="morefellowspop lauren" rel="popover" data-toggle="popover" data-content="MakerCorps Member" data-original-title="Lauren Barnes" href="" target="_blank"></a>
+				<a class="morefellowspop leah" rel="popover" data-toggle="popover" data-content="MakerCorps Member" data-original-title="Leah Silverberg" href="" target="_blank"></a>
+				<a class="morefellowspop sarah" rel="popover" data-toggle="popover" data-content="MakerCorps Member" data-original-title="Sarah Greenlaw" href="" target="_blank"></a>
+ -->
+
+
+			</div>
+		</div>
+	</div>
+
+
+<!--  
+<h2>Student Leaders</h2>
+
+	<div class="morefellows">
 		<div class="row-fluid">
 			<div class="span12">
 				<a class="morefellowspop alexp" rel="popover" data-toggle="popover" data-content="Designer" data-original-title="Alex Pandel" href="https://twitter.com/alexpandel" target="_blank"></a>
@@ -64,34 +92,68 @@ section: team
 				<a class="morefellowspop amir" rel="popover" data-toggle="popover" data-content="Developer" data-original-title="Amir Reavis-Bey" href="https://twitter.com/Maromba" target="_blank"></a>
 				<a class="morefellowspop angel" rel="popover" data-toggle="popover" data-content="Designer" data-original-title="Angel Kittiyachavalit" href="https://twitter.com/angelk" target="_blank"></a>
 				<a class="morefellowspop aurelio" rel="popover" data-toggle="popover" data-content="Developer" data-original-title="Aurelio Tunio" href="https://twitter.com/tinio" target="_blank"></a>
-				<a class="morefellowspop ben" rel="popover" data-toggle="popover" data-content="Developer" data-original-title="Ben Sheldon" href="https://twitter.com/bensheldon" target="_blank"></a>
-				<a class="morefellowspop diana" rel="popover" data-toggle="popover" data-content="Designer" data-original-title="Diana Tran" href="https://twitter.com/dianavtran" target="_blank"></a>
-				<a class="morefellowspop angel" rel="popover" data-toggle="popover" data-content="Designer" data-original-title="Angel Kittiyachavalit" href="https://twitter.com/angelk" target="_blank"></a>
-				<a class="morefellowspop aurelio" rel="popover" data-toggle="popover" data-content="Developer" data-original-title="Aurelio Tunio" href="https://twitter.com/tinio" target="_blank"></a>
-				<a class="morefellowspop ben" rel="popover" data-toggle="popover" data-content="Developer" data-original-title="Ben Sheldon" href="https://twitter.com/bensheldon" target="_blank"></a>
-				<a class="morefellowspop diana" rel="popover" data-toggle="popover" data-content="Designer" data-original-title="Diana Tran" href="https://twitter.com/dianavtran" target="_blank"></a>
-				<a class="morefellowspop ben" rel="popover" data-toggle="popover" data-content="Developer" data-original-title="Ben Sheldon" href="https://twitter.com/bensheldon" target="_blank"></a>
-				<a class="morefellowspop diana" rel="popover" data-toggle="popover" data-content="Designer" data-original-title="Diana Tran" href="https://twitter.com/dianavtran" target="_blank"></a>
-
 			</div>
 		</div>
 	</div>
+-->
 
 
-  <h2>Student Leaders</h2>
+  <h2>Sponsors & Donors</h2>
 
-<div class="morefellows">
+<div class="network themes">
+	
+	<div class="row-fluid">
+		<div class="span12 getinvolved">
+			<p class="blurb">Thank you to all of our donors! Without you, none of what we do would be possible!</p>
+
+
+	<div class="stats">
 		<div class="row-fluid">
 			<div class="span12">
-				<a class="morefellowspop alexp" rel="popover" data-toggle="popover" data-content="Designer" data-original-title="Alex Pandel" href="https://twitter.com/alexpandel" target="_blank"></a>
-				<a class="morefellowspop alexy" rel="popover" data-toggle="popover" data-content="Developer &amp; Geographer" data-original-title="Alex Yule" href="https://twitter.com/yuletide" target="_blank"></a>	
-				<a class="morefellowspop alicia" rel="popover" data-toggle="popover" data-content="Urbanist" data-original-title="Alicia Rouault" href="https://twitter.com/arouault" target="_blank"></a>
-				<a class="morefellowspop amir" rel="popover" data-toggle="popover" data-content="Developer" data-original-title="Amir Reavis-Bey" href="https://twitter.com/Maromba" target="_blank"></a>
-				<a class="morefellowspop angel" rel="popover" data-toggle="popover" data-content="Designer" data-original-title="Angel Kittiyachavalit" href="https://twitter.com/angelk" target="_blank"></a>
-				<a class="morefellowspop aurelio" rel="popover" data-toggle="popover" data-content="Developer" data-original-title="Aurelio Tunio" href="https://twitter.com/tinio" target="_blank"></a>
+				<h4>Lead Sponsors</h4>
+				<ul>
+					<li>Abell Foundation</li>
+					<li>OSTP</li>
+					<li>BCPSS</li>
+					<li>DLA Piper</li>
+				</ul>
 			</div>
+			
+		</div>
+		<div class="row-fluid">
+			<div class="span6">
+				<h4>Top Tier</h4>
+				<ul>
+					<li>Annie E. Case Foundation</li>
+					<li>Bonsal Family Fund</li>
+					<li>Smart Logic</li>
+
+				</ul>
+			</div>
+			<div class="span6">
+				<h4>Second Tier</h4>
+				<ul>
+					<li>EAGB</li>
+					<li>another</li>
+					<li>other</li>
+
+				</ul>
+			</div>
+			
 		</div>
 	</div>
+
+
+		
+
+
+
+		</div>
+	</div>
+</div>
+
+
+
 
 
 </div>
