--- a/_posts/2013-05-10-blog.html
+++ b/_posts/2013-05-10-blog.html
@@ -148,24 +148,7 @@ section: blog
 		</div>
 	</div>
 
-<br /><br />
-<div class="row-fluid">
-		<div class="span12">
-			<h4 class="headline">MailChimp Newsletter</h4><br />
-		</div>
-	</div>
-<div class="getinvolved">
-  <div class="row-fluid">
-    <div class="span12">
-      <form action="http://digitalharborfoundation.us5.list-manage.com/subscribe/post?u=5e0a20d52eba7cf34308abf32&amp;id=3676726eea" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
-        <label>Sign up for our newsletter</label>
-        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter your email here" />
-        <button type="submit" class="btn">Sign up</button>
-      </form>
-    </div>
-  </div>
-</div>
-
+<br />
 <br />
 	<div class="row-fluid">
 		<!-- <div class="span1">
@@ -175,59 +158,56 @@ section: blog
 			<h3 class="headline">The Blogs</h3>
 		</div>
 	</div>
+
+
+
 	<div class="row-fluid">
-		<div class="span12">
-			<div class="line"></div>
+		<div class="span12 getinvolved">
 			<p class="blurb">The writings above are pulled together from a variety of locations. See the full list below:</p>
-		</div>
-	</div>
+
 
 	<div class="stats">
 		<div class="row-fluid">
-			<div class="span4 offset2">
-				<h4>Blog</h4>
-				<h1>DHF</h1>
+			<div class="span6">
+				<h4><a href="http://www.digitalharborfoundation.org/blog" target="_blank">DHF</a></h4>
 			</div>
-			<div class="span4">
-				<h4>Authors</h4>
-				<h5>Andrew Coy</h5>
-			</div>		
+			<div class="span6">
+				<h4><a href="http://www.dhftc.org/blog">Tech Center</a></h4>
+			</div>
 		</div>
 	</div>
-<br /><br />
 	<div class="stats">
 		<div class="row-fluid">
-			<div class="span4 offset2">
-				<h1>DHFTC</h1>
+			<div class="span6">
+				<h4><a href="http://blog.edtechlink.org/" target="_blank">EdTech Link</a></h4>
 			</div>
-			<div class="span4">
-				<h5>Students</h5>
-			</div>		
+			<div class="span6">
+				<h4><a href="" target="_blank">Newsletter</a></h4>
+			</div>
 		</div>
 	</div>
-<br /><br />
 	<div class="stats">
 		<div class="row-fluid">
-			<div class="span4 offset2">
-				<h1>EdTech Link</h1>
+			<div class="span12">
+			<h4>Sign Up for Newsletter</h4>
+				
+ <form action="http://digitalharborfoundation.us5.list-manage.com/subscribe/post?u=5e0a20d52eba7cf34308abf32&amp;id=3676726eea" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
+        <!-- <label>Monthly newsletter:</label> -->
+        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter your email here" />
+        <button type="submit" class="btn">Sign up</button>
+      </form>
+
+
 			</div>
-			<div class="span4">
-				<h5>Teacher Fellows</h5>
-			</div>		
-		</div>
-	</div>
-<br /><br />
-	<div class="stats">
-		<div class="row-fluid">
-			<div class="span4 offset2">
-				<h1>MailChimp Archive</h1>
-			</div>
-			<div class="span4">
-				<h5>Teacher Fellows</h5>
-			</div>		
 		</div>
 	</div>
 
+
+	
+
+
+	</div>
+	</div>
 
 </div>
 
