--- a/_posts/2013-05-10-techcenter.html
+++ b/_posts/2013-05-10-techcenter.html
@@ -12,11 +12,11 @@ section: techcenter
 	<div class="row-fluid">
 		<div class="bios">
 			<div class="span3">
-				<iframe data-src="http://player.vimeo.com/video/51304851" width="430" height="260" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+			<img src="img/megalab.jpg" />
 			</div>
 			<div class="span9 bioright getinvolved">
 				<h3>Mega<span> LAB</span></h3>
-				<p>Amir Reavis-Bey spent more than seven years working as an investment banking technologist in New York City, developing an expertise in systems integration. As a Fellow he helped the City of New Orleans address the chronic issue of blighted and abandoned properties. At the end of their Fellowship year, Amir and the New Orleans team founded a company to offer <a href="http://blightstatus.com" target="_blank">BlightStatus</a> to other cities. As co-founder of <a href="http://civicindustries.com" target="_blank">Civic Industries</a>, he’s now part of a new wave of technology startups that are helping government provide higher value to citizens at a far lower cost.</p>
+				<p>High-school aged students interested in tech fields such as web development, mobile development, digital fabrication, and cyber security come daily to the MegaLab where they work with <em>mentors</em> and <em>tech coaches</em> on individually-identified projects. Student who have developed skills are then able to participate in the <a href="http://www.stemengine.org/" target="_blank">STEM Engine</a> workforce development program.</p>
 			</div>
 		</div>
 	</div>
@@ -25,10 +25,10 @@ section: techcenter
 		<div class="bios right">
 			<div class="span9 bioleft getinvolved">
 				<h3>Nano<span> Lab</span></h3>
-				<p>Ruthie BenDor is a front-end developer and designer who worked for GLAD and MassEquality and founded a 100+ member user group for the ExpressionEngine CMS. As a Fellow, Ruthie and the Santa Cruz, Calif. team collaborated closely with Economic Development Coordinator Peter Koht to make it easier for entrepreneurs to start local businesses. The resulting tool, <a href="http://opencounter.cityofsantacruz.com/" target="_blank">OpenCounter</a>, walks an aspiring small business owner through the complicated zoning codes, forms, and fees needed to apply for a business permit – and enables them to apply directly online. Ruthie's now a design technologist at fuseproject.</p>
+				<p>The NanoLab, serving children in grades Pre-K through 5th grade, develops students STEM abilities through creation, cooperation, collaboration, organization, and digital literacy. The NanoBots (our students) work in both individual and group project based learning where they are introduced to a new theme at the beginning of each week.</p>
 			</div>
 			<div class="span3">
-				<iframe src="http://player.vimeo.com/video/51316356" width="430" height="260" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+			<img src="img/nanolab.jpg" />
 			</div>
 		</div>
 	</div>
@@ -36,15 +36,16 @@ section: techcenter
   <div class="row-fluid">	
 		<div class="bios">
 			<div class="span3">
-				<iframe data-src="http://player.vimeo.com/video/51304919" width="430" height="260" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+			<img src="img/prolab.jpg" />
 			</div>
 			<div class="span9 bioright getinvolved">
 				<h3>Pro<span> Lab</span></h3>
-				<p>Jesse Bounds is a software engineer with a decade of experience, including leading the development of Fluent, the first highly optimized news aggregator and reader for the iPhone. As a Fellow on the Chicago team, he built tools to help cities make service requests – like broken streetlights or potholes – easier to manage and understand. Now Chicagoans can go to <a href="http://servicetracker.cityofchicago.org/" target="_blank">311 ServiceTracker</a> and see the status of their requests throughout the process, as easily as they track packages through FedEx. He is now an engineer at Pivotal Labs in San Francisco.</p>
+				<p>In response to overwhelming demand from students for things related to audio and video production, DHF has outlined plans and space to create a Pro(duction) Lab for recording and mixing purposes. The lab is projected to open by the end of 2013. In the mean time, students are already working on DJ and mixing skills in the MegaLab. </p>
 			</div>
 		</div>
 	</div>
 
+<!-- 
   <h2>What else does DHF do?</h2>
 	<div class="row-fluid">
 		<div class="bios">
@@ -70,7 +71,7 @@ section: techcenter
 		</div>
 	</div>
 
-  <div class="row-fluid">	
+	<div class="row-fluid">	
 		<div class="bios">
 			<div class="span3">
 				<iframe data-src="http://player.vimeo.com/video/51304919" width="430" height="260" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
@@ -81,5 +82,7 @@ section: techcenter
 			</div>
 		</div>
 	</div>
+
+-->
 
 </div>
