--- a/_posts/2013-05-06-contact.html
+++ b/_posts/2013-05-06-contact.html
@@ -10,7 +10,7 @@ section: contact
 	
 	<div class="row-fluid">
 		<div class="span12 getinvolved">
-			<p class="blurb">We'd love to hear from you. Please feel free to reach out to us via email or any one of our social media networks:</p>
+			<p class="blurb">Please feel free to connect with us via email or any one of our social media networks:</p>
 
 
 	<div class="stats">
