--- a/_posts/2013-05-09-team.html
+++ b/_posts/2013-05-09-team.html
@@ -67,7 +67,7 @@ section: team
 				<a class="morefellowspop courtney" rel="popover" data-toggle="popover" data-content="Assistant Elementary Program Coordinator" data-original-title="Courtney Parto" href="https://twitter.com/c_parto" target="_blank"></a>
 				<a class="morefellowspop dale" rel="popover" data-toggle="popover" data-content="Secondary Program Coordinator" data-original-title="Dale Beran" href="" target="_blank"></a>
 				<a class="morefellowspop COMMUNITY" rel="popover" data-toggle="popover" data-content="Community Program Coordinator" data-original-title="VACANT" href="" target="_blank"></a>
-				<a class="morefellowspop ty" rel="popover" data-toggle="popover" data-content="Volunteer Program Coordinator" data-original-title="Ty Pearson" href="https://twitter.com/tygemstones" target="_blank"></a>
+				<a class="morefellowspop ty" rel="popover" data-toggle="popover" data-content="Volunteer Coordinator" data-original-title="Ty Pearson" href="https://twitter.com/tygemstones" target="_blank"></a>
  <!--				<a class="morefellowspop martha" rel="popover" data-toggle="popover" data-content="MakerCorps Member" data-original-title="Martha Schnee" href="" target="_blank"></a>
 				<a class="morefellowspop lauren" rel="popover" data-toggle="popover" data-content="MakerCorps Member" data-original-title="Lauren Barnes" href="" target="_blank"></a>
 				<a class="morefellowspop leah" rel="popover" data-toggle="popover" data-content="MakerCorps Member" data-original-title="Leah Silverberg" href="" target="_blank"></a>
@@ -113,8 +113,8 @@ section: team
 				<h4>Lead Sponsors</h4>
 				<ul>
 					<li>Abell Foundation</li>
-					<li>OSTP</li>
-					<li>BCPSS</li>
+					<li>Omni Science Technology Partners</li>
+					<li>Baltimore City Public Schools</li>
 					<li>DLA Piper</li>
 				</ul>
 			</div>
@@ -122,21 +122,55 @@ section: team
 		</div>
 		<div class="row-fluid">
 			<div class="span6">
-				<h4>Top Tier</h4>
+				<h4>Organizations</h4>
 				<ul>
-					<li>Annie E. Case Foundation</li>
-					<li>Bonsal Family Fund</li>
-					<li>Smart Logic</li>
 
+					<li>Battelle Ed</li>
+					<li>Annie E. Casey Foundation</li>
+					<li>Bonsal Family Fund</li>
+					<li>Maker Education Initiative</li>
+					<li>Intel</li>
+					<li>Cognizant</li>
+					<li>O'Reilly Media</li>
+					<li>Pixar Animation Studio</li>
+					<li>Mindgrub Technologies</li>
+					<li>Economic Alliance of Greater Baltimore</li>
+					<li>M&T Bank</li>
+					<li>DHRED</li>
+					<li>Smart Logic</li>
+					<li>BTS</li>
+					<li>RedOwl Analytics</li>
+					<li>PayPal</li>
+					<li>Microsoft</li>
 				</ul>
 			</div>
 			<div class="span6">
-				<h4>Second Tier</h4>
+				<h4>Individuals</h4>
 				<ul>
-					<li>EAGB</li>
-					<li>another</li>
-					<li>other</li>
-
+					<li>Vince Talbert</li>
+					<li>Chris Hoyt</li>
+					<li>Nick Hallam</li>
+					<li>Chris Engel</li>
+					<li>Joseph Manko</li>
+					<li>Dave Troy</li>
+					<li>Mark Headd</li>
+					<li>Yair Flicker</li>
+					<li>Tim Hodge</li>
+					<li>John Cammack</li>
+					<li>Guy Filipelli</li>
+					<li>Robert Embry</li>
+					<li>Delali Dzirasa</li>
+					<li>Rick Geritz</li>
+					<li>Greg Cangialosi</li>
+					<li>Mike Brenner</li>
+					<li>Jason Pappas</li>
+					<li>Johanna Bachman</li>
+					<li>Hal & Susan Malone</li>
+					<li>Susan Magsamen</li>
+					<li>William Roth</li>
+					<li>Sarah Sechrist</li>
+					<li>Jennifer Accardo</li>
+					<li>Jen Gunner Meyer</li>
 				</ul>
 			</div>
 			
