--- a/_posts/2013-05-10-techcenter.html
+++ b/_posts/2013-05-10-techcenter.html
@@ -16,7 +16,7 @@ section: techcenter
 			</div>
 			<div class="span9 bioright getinvolved">
 				<h3>Mega<span> LAB</span></h3>
-				<p>High-school aged students interested in tech fields such as web development, mobile development, digital fabrication, and cyber security come daily to the MegaLab where they work with <em>mentors</em> and <em>tech coaches</em> on individually-identified projects. Student who have developed skills are then able to participate in the <a href="http://www.stemengine.org/" target="_blank">STEM Engine</a> workforce development program.</p>
+				<p>High-school aged students interested in tech fields such as web development, mobile development, digital fabrication, and cyber security come daily to the MegaLab where they work with <em>mentors</em> and <em>tech coaches</em> on individually-identified projects. Students who have developed skills are then able to participate in the <a href="http://www.stemengine.org/" target="_blank">STEM Engine</a> workforce development program.</p>
 			</div>
 		</div>
 	</div>
@@ -25,7 +25,7 @@ section: techcenter
 		<div class="bios right">
 			<div class="span9 bioleft getinvolved">
 				<h3>Nano<span> Lab</span></h3>
-				<p>The NanoLab, serving children in grades Pre-K through 5th grade, develops students STEM abilities through creation, cooperation, collaboration, organization, and digital literacy. The NanoBots (our students) work in both individual and group project based learning where they are introduced to a new theme at the beginning of each week.</p>
+				<p>The NanoLab, serving children in grades Pre-K through 5th grade, develops students' STEM abilities through creation, cooperation, collaboration, organization, and digital literacy. The NanoBots (our students) explore a variety of themes and activities, as individuals and groups, in a creative project-based learning environment.</p>
 			</div>
 			<div class="span3">
 			<img src="img/nanolab.jpg" />
@@ -40,7 +40,7 @@ section: techcenter
 			</div>
 			<div class="span9 bioright getinvolved">
 				<h3>Pro<span> Lab</span></h3>
-				<p>In response to overwhelming demand from students for things related to audio and video production, DHF has outlined plans and space to create a Pro(duction) Lab for recording and mixing purposes. The lab is projected to open by the end of 2013. In the mean time, students are already working on DJ and mixing skills in the MegaLab. </p>
+				<p>In response to overwhelming demand from students for opportunities related to audio and video production, DHF has outlined plans and space to create a Pro(duction) Lab for recording and mixing purposes. The lab is projected to open by the end of 2013. In the mean time, students are already working on DJ and mixing skills in the MegaLab. </p>
 			</div>
 		</div>
 	</div>
