Updates to Team
Updated images;
moved DHF Staff to first on post

--- a/_posts/2013-05-09-team.html
+++ b/_posts/2013-05-09-team.html
@@ -6,6 +6,32 @@ pagetype: story
 section: team
 ---
 
+ <h2>DHF Staff</h2>
+
+<div class="dhfstaff">
+		<div class="row-fluid">
+			<div class="span12">
+				<a class="morefellowspop andrew" rel="popover" data-toggle="popover" data-content="Executive Director" data-original-title="Andrew Coy" href="https://twitter.com/andrewcoy" target="_blank"></a>
+				<a class="morefellowspop shawn" rel="popover" data-toggle="popover" data-content="Director of Technology" data-original-title="Shawn Grimes" href="https://twitter.com/shawng" target="_blank"></a>	
+				<a class="morefellowspop steph" rel="popover" data-toggle="popover" data-content="Director of Curriculum" data-original-title="Steph Grimes" href="https://twitter.com/createdbysteph" target="_blank"></a>
+				<a class="morefellowspop jean" rel="popover" data-toggle="popover" data-content="Director of Media" data-original-title="Jean Carlos Cedré" href="https://twitter.com/jccedre" target="_blank"></a>
+				<a class="morefellowspop amber" rel="popover" data-toggle="popover" data-content="Director of Operations" data-original-title="Amber Grimes" href="" target="_blank"></a>
+				<a class="morefellowspop meaghan" rel="popover" data-toggle="popover" data-content="Elementary Program Coordinator" data-original-title="Meaghan Lynch" href="https://twitter.com/meagcl" target="_blank"></a>
+				<a class="morefellowspop courtney" rel="popover" data-toggle="popover" data-content="Assistant Elementary Program Coordinator" data-original-title="Courtney Parto" href="https://twitter.com/c_parto" target="_blank"></a>
+				<a class="morefellowspop dale" rel="popover" data-toggle="popover" data-content="Secondary Program Coordinator" data-original-title="Dale Beran" href="" target="_blank"></a>
+				<a class="morefellowspop COMMUNITY" rel="popover" data-toggle="popover" data-content="Community Program Coordinator" data-original-title="VACANT" href="" target="_blank"></a>
+				<a class="morefellowspop ty" rel="popover" data-toggle="popover" data-content="Volunteer Coordinator" data-original-title="Ty Pearson" href="https://twitter.com/tygemstones" target="_blank"></a>
+ <!--				<a class="morefellowspop martha" rel="popover" data-toggle="popover" data-content="MakerCorps Member" data-original-title="Martha Schnee" href="" target="_blank"></a>
+				<a class="morefellowspop lauren" rel="popover" data-toggle="popover" data-content="MakerCorps Member" data-original-title="Lauren Barnes" href="" target="_blank"></a>
+				<a class="morefellowspop leah" rel="popover" data-toggle="popover" data-content="MakerCorps Member" data-original-title="Leah Silverberg" href="" target="_blank"></a>
+				<a class="morefellowspop sarah" rel="popover" data-toggle="popover" data-content="MakerCorps Member" data-original-title="Sarah Greenlaw" href="" target="_blank"></a>
+ -->
+
+
+			</div>
+		</div>
+	</div>
+
 
 
   <h2>Board of Trustees</h2>
@@ -13,13 +39,13 @@ section: team
 <div class="btrustee">
 		<div class="row-fluid">
 			<div class="span12">
-				<a class="morefellowspop sean" rel="popover" data-toggle="popover" data-content="Chairman" data-original-title="Sean Lane" href="http://www.linkedin.com/pub/sean-lane/63/395/4b9" target="_blank"></a>
-				<a class="morefellowspop josh" rel="popover" data-toggle="popover" data-content="Treasurer" data-original-title="Josh Huber" href="http://www.linkedin.com/in/joshhuber" target="_blank"></a>	
 				<a class="morefellowspop chris" rel="popover" data-toggle="popover" data-content="&nbsp;" data-original-title="Chris Hoyt" href="http://www.linkedin.com/pub/chris-hoyt/0/61/b7" target="_blank"></a>
 				<a class="morefellowspop david" rel="popover" data-toggle="popover" data-content="&nbsp;" data-original-title="David Stone" href="http://www.linkedin.com/pub/david-stone/45/6b5/a2b" target="_blank"></a>
 				<a class="morefellowspop guy" rel="popover" data-toggle="popover" data-content="&nbsp;" data-original-title="Guy Filipelli" target="_blank"></a>
+				<a class="morefellowspop josh" rel="popover" data-toggle="popover" data-content="Treasurer" data-original-title="Josh Huber" href="http://www.linkedin.com/in/joshhuber" target="_blank"></a>
 				<a class="morefellowspop olga" rel="popover" data-toggle="popover" data-content="&nbsp;" data-original-title="Olga Maltseva" href="http://www.linkedin.com/in/olgamaltseva" target="_blank"></a>
 				<a class="morefellowspop rachel" rel="popover" data-toggle="popover" data-content="&nbsp;" data-original-title="Rachel Charlesworth" href="http://ar.linkedin.com/in/rachelcharlesworth" target="_blank"></a>
+				<a class="morefellowspop sean" rel="popover" data-toggle="popover" data-content="Chairman" data-original-title="Sean Lane" href="http://www.linkedin.com/pub/sean-lane/63/395/4b9" target="_blank"></a>
 				<a class="morefellowspop vincent" rel="popover" data-toggle="popover" data-content="&nbsp;" data-original-title="Vince Talbert" href="http://www.linkedin.com/in/vincetalbert" target="_blank"></a>
 
 			</div>
@@ -53,32 +79,7 @@ section: team
 	</div>
 
 
-  <h2>DHF Staff</h2>
-
-<div class="dhfstaff">
-		<div class="row-fluid">
-			<div class="span12">
-				<a class="morefellowspop andrew" rel="popover" data-toggle="popover" data-content="Executive Director" data-original-title="Andrew Coy" href="https://twitter.com/andrewcoy" target="_blank"></a>
-				<a class="morefellowspop shawn" rel="popover" data-toggle="popover" data-content="Director of Technology" data-original-title="Shawn Grimes" href="https://twitter.com/shawng" target="_blank"></a>	
-				<a class="morefellowspop steph" rel="popover" data-toggle="popover" data-content="Director of Curriculum" data-original-title="Steph Grimes" href="https://twitter.com/createdbysteph" target="_blank"></a>
-				<a class="morefellowspop jean" rel="popover" data-toggle="popover" data-content="Director of Media" data-original-title="Jean Carlos Cedré" href="https://twitter.com/jccedre" target="_blank"></a>
-				<a class="morefellowspop amber" rel="popover" data-toggle="popover" data-content="Director of Operations" data-original-title="Amber Grimes" href="" target="_blank"></a>
-				<a class="morefellowspop meaghan" rel="popover" data-toggle="popover" data-content="Elementary Program Coordinator" data-original-title="Meaghan Lynch" href="https://twitter.com/meagcl" target="_blank"></a>
-				<a class="morefellowspop courtney" rel="popover" data-toggle="popover" data-content="Assistant Elementary Program Coordinator" data-original-title="Courtney Parto" href="https://twitter.com/c_parto" target="_blank"></a>
-				<a class="morefellowspop dale" rel="popover" data-toggle="popover" data-content="Secondary Program Coordinator" data-original-title="Dale Beran" href="" target="_blank"></a>
-				<a class="morefellowspop COMMUNITY" rel="popover" data-toggle="popover" data-content="Community Program Coordinator" data-original-title="VACANT" href="" target="_blank"></a>
-				<a class="morefellowspop ty" rel="popover" data-toggle="popover" data-content="Volunteer Coordinator" data-original-title="Ty Pearson" href="https://twitter.com/tygemstones" target="_blank"></a>
- <!--				<a class="morefellowspop martha" rel="popover" data-toggle="popover" data-content="MakerCorps Member" data-original-title="Martha Schnee" href="" target="_blank"></a>
-				<a class="morefellowspop lauren" rel="popover" data-toggle="popover" data-content="MakerCorps Member" data-original-title="Lauren Barnes" href="" target="_blank"></a>
-				<a class="morefellowspop leah" rel="popover" data-toggle="popover" data-content="MakerCorps Member" data-original-title="Leah Silverberg" href="" target="_blank"></a>
-				<a class="morefellowspop sarah" rel="popover" data-toggle="popover" data-content="MakerCorps Member" data-original-title="Sarah Greenlaw" href="" target="_blank"></a>
- -->
-
-
-			</div>
-		</div>
-	</div>
-
+ 
 
 <!--  
 <h2>Student Leaders</h2>
@@ -142,6 +143,7 @@ section: team
 					<li>RedOwl Analytics</li>
 					<li>PayPal</li>
 					<li>Microsoft</li>
+					<li>Evolve Communications</li>
 				</ul>
 			</div>
 			<div class="span6">
