--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ title: STEM Core
           <li class="navmission"><a href="#">Digital Harbor Foundation</a></li>
           <li class="nav"><a href="#">:::</a></li>
           <li class="navtechcenter"><a href="#">Tech Center</a></li>
+          <!-- <li class="navmakercamp"><a href="#">MakerCamp</a></li> -->
           <li class="navblog"><a href="#">Blog</a></li>
           <li class="navteam"><a href="#">Team</a></li>
           <li class="navpress"><a href="#">Press</a></li>
