Adjusted to work on iPhone but still needs some work

--- a/_posts/2013-05-09-team.html
+++ b/_posts/2013-05-09-team.html
@@ -14,7 +14,7 @@ section: team
 				<a class="morefellowspop andrew" rel="popover" data-toggle="popover" data-content="Executive Director" data-original-title="Andrew Coy" href="https://twitter.com/andrewcoy" target="_blank"></a>
 				<a class="morefellowspop shawn" rel="popover" data-toggle="popover" data-content="Director of Technology" data-original-title="Shawn Grimes" href="https://twitter.com/shawng" target="_blank"></a>	
 				<a class="morefellowspop steph" rel="popover" data-toggle="popover" data-content="Director of Curriculum" data-original-title="Steph Grimes" href="https://twitter.com/createdbysteph" target="_blank"></a>
-				<a class="morefellowspop jean" rel="popover" data-toggle="popover" data-content="Director of Media" data-original-title="Jean Carlos Cedré" href="https://twitter.com/jccedre" target="_blank"></a>
+				<a class="morefellowspop jean" rel="popover" data-toggle="popover" data-content="Director of Media" data-original-title="Jean Carlos Cedre" href="https://twitter.com/jccedre" target="_blank"></a>
 				<a class="morefellowspop amber" rel="popover" data-toggle="popover" data-content="Director of Operations" data-original-title="Amber Grimes" href="" target="_blank"></a>
 				<a class="morefellowspop meaghan" rel="popover" data-toggle="popover" data-content="Elementary Program Coordinator" data-original-title="Meaghan Lynch" href="https://twitter.com/meagcl" target="_blank"></a>
 				<a class="morefellowspop courtney" rel="popover" data-toggle="popover" data-content="Assistant Elementary Program Coordinator" data-original-title="Courtney Parto" href="https://twitter.com/c_parto" target="_blank"></a>
