--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ title: STEM Core
 
 <div class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
+	    <div class="navmission"><a href="#">Digital Harbor Foundation</a></div>
     <div class="container">
       <!-- Everything you want hidden at 940px or less, place within here -->
       <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
@@ -27,7 +28,7 @@ title: STEM Core
 
         <!-- .nav, .navbar-search, .navbar-form, etc -->
         <ul class="nav">
-          <li class="navmission"><a href="#">Digital Harbor Foundation</a></li>
+          <!--<li class="navmission"><a href="#">Digital Harbor Foundation</a></li>-->
           <li class="nav"><a href="#">:::</a></li>
           <li class="navtechcenter"><a href="#">Tech Center</a></li>
           <!-- <li class="navmakercamp"><a href="#">MakerCamp</a></li> -->
