--- a/_posts/2013-05-10-techcenter.html
+++ b/_posts/2013-05-10-techcenter.html
@@ -54,7 +54,7 @@ section: techcenter
 			</div>
 			<div class="span9 bioright getinvolved">
 				<h3>Web<span> Slam</span></h3>
-				<p>Amir Reavis-Bey spent more than seven years working as an investment banking technologist in New York City, developing an expertise in systems integration. As a Fellow he helped the City of New Orleans address the chronic issue of blighted and abandoned properties. At the end of their Fellowship year, Amir and the New Orleans team founded a company to offer <a href="http://blightstatus.com" target="_blank">BlightStatus</a> to other cities. As co-founder of <a href="http://civicindustries.com" target="_blank">Civic Industries</a>, he’s now part of a new wave of technology startups that are helping government provide higher value to citizens at a far lower cost.</p>
+				<p>Amir Reavis-Bey spent more than seven years working as an investment banking technologist in New York City, developing an expertise in systems integration. As a Fellow he helped the City of New Orleans address the chronic issue of blighted and abandoned properties. At the end of their Fellowship year, Amir and the New Orleans team founded a company to offer <a href="http://blightstatus.com" target="_blank">BlightStatus</a> to other cities. As co-founder of <a href="http://civicindustries.com" target="_blank">Civic Industries</a>, he?s now part of a new wave of technology startups that are helping government provide higher value to citizens at a far lower cost.</p>
 			</div>
 		</div>
 	</div>
@@ -63,7 +63,7 @@ section: techcenter
 		<div class="bios right">
 			<div class="span9 bioleft getinvolved">
 				<h3>Fab<span> Slam</span></h3>
-				<p>Ruthie BenDor is a front-end developer and designer who worked for GLAD and MassEquality and founded a 100+ member user group for the ExpressionEngine CMS. As a Fellow, Ruthie and the Santa Cruz, Calif. team collaborated closely with Economic Development Coordinator Peter Koht to make it easier for entrepreneurs to start local businesses. The resulting tool, <a href="http://opencounter.cityofsantacruz.com/" target="_blank">OpenCounter</a>, walks an aspiring small business owner through the complicated zoning codes, forms, and fees needed to apply for a business permit – and enables them to apply directly online. Ruthie's now a design technologist at fuseproject.</p>
+				<p>Ruthie BenDor is a front-end developer and designer who worked for GLAD and MassEquality and founded a 100+ member user group for the ExpressionEngine CMS. As a Fellow, Ruthie and the Santa Cruz, Calif. team collaborated closely with Economic Development Coordinator Peter Koht to make it easier for entrepreneurs to start local businesses. The resulting tool, <a href="http://opencounter.cityofsantacruz.com/" target="_blank">OpenCounter</a>, walks an aspiring small business owner through the complicated zoning codes, forms, and fees needed to apply for a business permit ? and enables them to apply directly online. Ruthie's now a design technologist at fuseproject.</p>
 			</div>
 			<div class="span3">
 				<iframe src="http://player.vimeo.com/video/51316356" width="430" height="260" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
@@ -78,7 +78,7 @@ section: techcenter
 			</div>
 			<div class="span9 bioright getinvolved">
 				<h3>Mobile<span> Slam</span></h3>
-				<p>Jesse Bounds is a software engineer with a decade of experience, including leading the development of Fluent, the first highly optimized news aggregator and reader for the iPhone. As a Fellow on the Chicago team, he built tools to help cities make service requests – like broken streetlights or potholes – easier to manage and understand. Now Chicagoans can go to <a href="http://servicetracker.cityofchicago.org/" target="_blank">311 ServiceTracker</a> and see the status of their requests throughout the process, as easily as they track packages through FedEx. He is now an engineer at Pivotal Labs in San Francisco.</p>
+				<p>Jesse Bounds is a software engineer with a decade of experience, including leading the development of Fluent, the first highly optimized news aggregator and reader for the iPhone. As a Fellow on the Chicago team, he built tools to help cities make service requests ? like broken streetlights or potholes ? easier to manage and understand. Now Chicagoans can go to <a href="http://servicetracker.cityofchicago.org/" target="_blank">311 ServiceTracker</a> and see the status of their requests throughout the process, as easily as they track packages through FedEx. He is now an engineer at Pivotal Labs in San Francisco.</p>
 			</div>
 		</div>
 	</div>
